Small paper tweaks

--- a/academic/icfp2010/supero.tex
+++ b/academic/icfp2010/supero.tex
@@ -70,7 +70,7 @@
 \titlebanner{\today{} - \currenttime{}}        % These are ignored unless
 \preprintfooter{}   % 'preprint' option specified.
 
-\title{Simpler Supercompilation}
+\title{Rethinking Supercompilation}
 % \subtitle{}
 
 \authorinfo{Neil Mitchell}
@@ -80,7 +80,7 @@
 \maketitle
 
 \begin{abstract}
-Supercompilation is a program optimisation technique, which can often eliminate the overhead of programmer abstractions. We present a new design for a supercompiler, rethinking many of the decisions that have become common in previous supercompilation work. The result is a supercompiler that we find simpler, and offers good performance both at compile time and runtime. We have implemented our supercompiler and benchmarked it on a selection of programs from the nofib benchmark suite, which run faster than both GHC and our previous supercompiler. We then put our supercompiler to practical use, optimising an HTML parsing library, and checking the equivalence of open expressions used as rewrite rules.
+Supercompilation is a program optimisation technique, which can often eliminate the overhead of programm abstractions. We present a new design for a supercompiler, rethinking many of the decisions that have become common in previous supercompilation work. The result is a supercompiler that we find simpler, and offers good performance both at compile time and runtime. We have implemented our supercompiler and benchmarked it on a selection of programs from the nofib benchmark suite, which run faster than both GHC and our previous supercompiler. We then put our supercompiler to practical use, optimising an HTML parsing library, and checking the equivalence of open expressions used as rewrite rules.
 \end{abstract}
 
 \category{D.3}{Software}{Programming Languages}
